--- a/app/views/articles/index.html.slim
+++ b/app/views/articles/index.html.slim
@@ -13,7 +13,8 @@
         | Leave your footpoints.
       span.articles__form__input
         = f.text_field :content
-  ul.articles__list
-    - @articles.each do |article|
-      li
-        = article.content
+  - if @articles.present?
+    ul.articles__list
+      - @articles.each do |article|
+        li
+          = article.content
